--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,7 @@ jobs:
       - image: cimg/node:13.8.0
     steps:
       - checkout
-      - inatall_awscli
+      - install_awscli
       - run:
           name: Ensure back-end infrastructure exists
           command: |
