--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,7 +163,7 @@ jobs:
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
 
       - run:
-          name: Ensure front-end infrastructure exist
+          name: Ensure front-end infrastructure exists
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
@@ -185,6 +185,7 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
+
       # Here's where you will add some code to rollback on failure      
 
 #   configure-infrastructure:
