--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,7 @@ jobs:
           command: |
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instance[*].PublicIpAddress' \
+              --query 'Reservations[*].Instance[*].[PublicIpAddress]' \
               --output text)
             echo ${CIRCLE_WORKFLOW_ID:0:7}
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
