--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,7 +174,7 @@ jobs:
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instance[*].InstanceId' \
               --output text)
-            aws ec2 wait instance-status-ok --instance_ids ${BACKEND_INSTANCE_ID}
+            aws ec2 wait instance-status-ok --instance_ids $BACKEND_INSTANCE_ID
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instance[*].[PublicIpAddress]' \
