--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,12 +174,12 @@ jobs:
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instance[*].InstanceId' \
               --output text)
-            aws ec2 wait instance-status-ok --instance-ids $BACKEND_INSTANCE_ID
+            aws ec2 descripe-instance-status --instance-ids $BACKEND_INSTANCE_ID
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instance[*].[PublicIpAddress]' \
               --output text)
-            echo ${CIRCLE_WORKFLOW_ID:0:7}
+            echo $BACKEND_INSTANCE_ID
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
             cat .circleci/ansible/inventory.txt
 
