--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,10 +174,10 @@ jobs:
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instance[*].InstanceId' \
               --output text)
-            aws ec2 describe-instance-status --instance-ids $BACKEND_INSTANCE_ID
+            aws ec2 wait instance-status-ok --instance-ids $BACKEND_INSTANCE_ID
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instance[*].[PublicIpAddress]' \
+              --query 'Reservations[*].Instance[*].PublicIpAddress' --region ${AWS_DEFAULT_REGION} \
               --output text)
             echo $BACKEND_INSTANCE_ID
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
