--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,7 +177,7 @@ jobs:
             aws ec2 wait instance-status-ok --instance-ids $BACKEND_INSTANCE_ID
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instance[*].PublicIpAddress' --region ${AWS_DEFAULT_REGION} \
+              --query 'Reservations[*].Instance[*].PublicIpAddress' --region us-west-2 \
               --output text)
             echo $BACKEND_INSTANCE_ID
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
