--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,7 +176,7 @@ jobs:
               --output text)
             aws ec2 wait instance-status-ok --instance-ids $BACKEND_INSTANCE_ID
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --instance-ids $BACKEND_INSTANCE_ID \
               --query 'Reservations[*].Instance[*].PublicIpAddress' --region us-west-2 \
               --output text)
             echo $BACKEND_INSTANCE_ID
