--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,13 +172,13 @@ jobs:
           command: |
             BACKEND_INSTANCE_ID=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instance[*].InstanceId' \
+              --query=Reservations[].Instance[].InstanceId \
               --output text)
             echo $BACKEND_INSTANCE_ID
             aws ec2 wait instance-status-ok --instance-ids $BACKEND_INSTANCE_ID
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
               --instance-ids $BACKEND_INSTANCE_ID \
-              --query 'Reservations[*].Instance[*].PublicIpAddress' --region us-west-2 \
+              --query=Reservations[].Instance[].PublicIpAddress --region us-west-2 \
               --output text)
             echo $BACKEND_PUBLIC_IP
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
