--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,7 @@ jobs:
             aws ec2 wait instance-status-ok --instance-ids $BACKEND_INSTANCE_ID
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
               --instance-ids $BACKEND_INSTANCE_ID \
-              --query=Reservations[].Instances[].PublicIpAddress --region us-west-2 \
+              --query=Reservations[].Instances[].PublicIpAddress --region ${AWS_DEFAULT_REGION} \
               --output text)
             echo $BACKEND_PUBLIC_IP
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
