node JS installation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ commands:
             name: Install Node.js 16
             command: |
               curl fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -
-              sudo apt install -y node.js
+              sudo apt install -y Node.js
 
     destroy-environment:
       description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
