--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,22 +279,44 @@ jobs:
       - destroy-environment
       - revert-migrations
                     
-#   deploy-backend:
-#     docker:
-#       # Docker image here that supports Ansible
-#     steps:
-#       # Checkout code from git
-#       # Add ssh keys with fingerprint
-#       # attach workspace
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Deploy backend
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+  deploy-backend:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_awscli
+      - install_ansible
+      - install_nodejs
+      - add_ssh_keys:
+          fingerprints: ["f5:2b:dd:40:8d:9d:63:a4:2b:bb:56:e3:90:5b:26:05"]
+      - attach_workspace:
+          at: ~/
+      - restore_cache:
+          keys: [backend-deps]
+      - run:
+          name: Install dependencies
+          command: |
+            cd backend
+            npm install
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            npm run build
+            cd ..
+            tar -czf artifact.tar.gz dist/* package*
+            cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
+
+            export TYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR_PROD}
+            export TYPEORM_ENTITIES=${TYPEORM_ENTITIES_PROD}
+            export TYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS_PROD}
+            
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+
+      - destroy-environment
+      - revert-migrations
 
 #   smoke-test:
 #     docker:
@@ -378,8 +400,8 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
       # - smoke-test:
       #     requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
