--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ jobs:
             cd backend
             npm run build
             cd ..
-            tar -C backend -czvf artifact.tar.gz .
+            tar -C backend czvf artifact.tar.gz .
             cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
             export TYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR_PROD}
             export TYPEORM_ENTITIES=${TYPEORM_ENTITIES_PROD}
