--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,8 +304,11 @@ jobs:
             cd backend
             npm run build
             cd ..
-            tar -C backend -cvzf artifact.tar.gz .
+            tar -C backend -czvf artifact.tar.gz .
             cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
+            export TYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR_PROD}
+            export TYPEORM_ENTITIES=${TYPEORM_ENTITIES_PROD}
+            export TYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS_PROD}
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
