--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -303,8 +303,8 @@ jobs:
           command: |
             cd backend
             npm run build
+            tar -czvf artifact.tar.gz dist/* package*
             cd ..
-            tar -C backend -czf artifact.tar.gz .
             cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
             cd .circleci/ansible
             cat inventory.txt
