--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -16,9 +16,9 @@
     NODE_ENV: production
     version: "1"
     TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
-    TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
-    TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
-    TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
+    TYPEORM_MIGRATIONS_DIR_PROD: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR_PROD')}}"
+    TYPEORM_ENTITIES_PROD: "{{ lookup('env', 'TYPEORM_ENTITIES_PROD')}}"
+    TYPEORM_MIGRATIONS_PROD: "{{ lookup('env', 'TYPEORM_MIGRATIONS_PROD')}}"
     TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
     TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT')}}"
     TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
