--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -323,7 +323,8 @@ jobs:
       - run:
           name: Backend smoke test
           command: |
-            BACKEND_IP=&(tail -1 .circleci/ansible/inventory.txt)
+            BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query=Reservations[].Instances[].PublicIpAddress --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
             if curl -s "${API_URL}/api/status" | grep "ok"
