--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,4 +1,27 @@
 ---
+- name: "update apt packages"
+  apt:
+    update_cache: yes
+
+- name: "upgrade packages"
+  apt:
+    upgrade: yes
+
+- name: "remove unused dependences"
+  apt:
+    autoremove: yes
+
+- name: "install nodejs"
+  shell: |
+    curl fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash - && sudo apt-get install -y node.js
+    
+- name: "Install PM2 Globally"
+  npm:
+    name: pm2
+    global: yes
+    state: present
+    production: yes
+
 - name: "Backend app dir creation"
   file:
     path: ~/backend-app
