--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -12,8 +12,8 @@
     autoremove: yes
 
 - name: "install nodejs"
-  shell: |
-    curl fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash - && sudo apt-get install -y node.js
+  apt:
+    install nodejs
     
 - name: "Install PM2 Globally"
   npm:
