--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -340,6 +340,9 @@ jobs:
               exit 1
             fi
 
+      - destroy-environment
+      - revert-migrations
+
 
 #    cloudfront-update:
 #     docker:
