--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,9 +325,9 @@ jobs:
             echo "${API_URL}"
             if curl -s "${API_URL}/api/status" | grep "ok"
             then
-              exit 1
+              exit 0
             else
-              exit 2
+              exit 1
             fi
       - run:
           name: Frontend smoke test.
@@ -344,20 +344,30 @@ jobs:
       - revert-migrations
 
 
-#    cloudfront-update:
-#     docker:
-#       # Docker image here that supports AWS CLI
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Update cloudfront distribution
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+  cloudfront-update:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_awscli
+      - install_nodejs
+      - run:
+          name: Save Old workflow ID
+          command: |
+            export OLD_WORKFLOW_ID=$(aws cloudformation \
+                      list-exports --query "Exoprts[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+            echo $OLD_WORKFLOW_ID
+            curl -d "${OLD_WORKFLOW_ID}" https://kvdb.io/${KVDB_BUCKET}/old_workflow_id
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/cloudfront.yml \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+              --stack-name InitialStack
+
+      - destroy-environment
+      - revert-migrations
 
 # cleanup:
 #     docker:
@@ -407,7 +417,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
+      - cloudfront-update:
+          requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
