--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -354,9 +354,10 @@ jobs:
       - run:
           name: Save Old workflow ID
           command: |
-            export OLD_WORKFLOW_ID=$(aws cloudformation \
-                      list-exports --query "Exoprts[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
-            echo $OLD_WORKFLOW_ID
+            OLD_WORKFLOW_ID=$(aws cloudformation \
+              list-exports --query "Exoprts[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+            echo "OLD_WORKFLOW_ID: $OLD_WORKFLOW_ID."
+
             curl -d "${OLD_WORKFLOW_ID}" https://kvdb.io/${KVDB_BUCKET}/old_workflow_id
       - run:
           name: Update cloudfront distribution
@@ -392,16 +393,16 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
+      # - build-frontend
+      # - build-backend
+      # - test-frontend:
+      #     requires: [build-frontend]
+      # - test-backend:
+      #     requires: [build-backend]
+      # - scan-backend:
+      #     requires: [build-backend]
+      # - scan-frontend:
+      #     requires: [build-frontend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
