--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -354,9 +354,10 @@ jobs:
       - run:
           name: Save Old workflow ID
           command: |
-            OLD_WORKFLOW_ID=$(aws cloudformation \
-              list-exports --query "Exoprts[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
-            echo "OLD_WORKFLOW_ID: $OLD_WORKFLOW_ID."
+            export OLD_WORKFLOW_ID=$(aws cloudformation \
+                      list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                      --no-paginate --output text)
+            echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
 
             curl -d "${OLD_WORKFLOW_ID}" https://kvdb.io/${KVDB_BUCKET}/old_workflow_id
       - run:
