--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -266,7 +266,8 @@ jobs:
           command: |
             BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query=Reservations[].Instances[].PublicIpAddress --output text)
-            export API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            export API_URL="http://${BACKEND_IP}:3030" 
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             echo "${API_URL}"
             cat frontend/.env
       - run:
